# rsplug.nvim

./: .gitignore  .stylua.toml  AGENTS.md  CLAUDE.md  Cargo.toml  PLANS-copy-unification.md  PLANS.md  README  README.md  docs-plan.md  example.toml  flake.nix  mise.toml  rsplug_config_display_spec.md  rust-toolchain.toml
.claude/: settings.json
.claude/skills/: neowright.md  rsplug-lazy-loading.md  rust-verification.md
.github/workflows/: release.yml
adaptive_semaphore/: Cargo.toml
adaptive_semaphore/src/: lib.rs
crates/adaptive_semaphore/src/: lib.rs
crates/dag/src/: lib.rs
crates/dag/tests/: main_test.rs
crates/file_specifier/: Cargo.toml
crates/file_specifier/src/: lib.rs
crates/rsplug/: Cargo.toml
crates/rsplug/src/: log.rs  main.rs  osc94.rs  scheduler.rs
crates/rsplug/src/rsplug/: mod.rs  perf.rs  util.rs
crates/rsplug/src/rsplug/entities/: acquisition.rs  assembly.rs  build.rs  config.rs  config_walker.rs  error.rs  inventory.rs  lazy_registration.rs  lazy_type.rs  lockfile.rs  manifest.rs  merge.rs  merge_type.rs  mod.rs  pack_plan.rs  packpathstate.rs  plugctl.rs  plugin.rs  plugin_id.rs
crates/rsplug/templates/: ignore.gitignore  init.stpl  lua_build.stpl
crates/rsplug/templates/doc/: rsplug.txt
crates/rsplug/templates/ftplugin/: on_ft.stpl
crates/rsplug/templates/lua/_rsplug/: hooks.stpl  init.stpl  on_cmd.stpl  on_event.stpl  on_ft.lua  on_func.stpl  on_lua.stpl
crates/rsplug/templates/lua/_rsplug/on_map/: init.lua  mode__.stpl
crates/rsplug/templates/plugin/: lua_autocmd.stpl  lua_start.stpl  on_cmd.stpl  on_event.stpl  on_func.stpl  on_lua.lua  on_map.lua  on_map.stpl
crates/rsplug/tests/: e2e_local_cache.rs  runtime_hot_paths.lua
crates/rsplug/tests/fixtures/m0/: README.md
crates/walker/: Cargo.toml
crates/walker/src/: compiled_glob.rs  main.rs
dag/: Cargo.toml
dag/src/: lib.rs
dag/tests/: main_test.rs
doc/: rsplug.txt
docs/releases/: v0.4.0.md
file_specifier/: Cargo.toml
file_specifier/src/: lib.rs
globbench/: Cargo.toml
globbench/src/: bench.rs  bench_rules.rs  bench_runners.rs  bench_types.rs  main.rs
globwalker/: .gitignore  Cargo.toml
globwalker/bench/: Cargo.toml
globwalker/bench/src/: bench_rules.rs  bench_runners.rs
globwalker/src/: fs_resolver.rs  lib.rs  pattern.rs
globwalker/src/walker/: init.rs  mod.rs
globwalker/tests/: glob_walk.rs
globwalker/tests/glob_walk/: pattern_semantics.rs  runtime_limits.rs  support.rs  symlink_behavior.rs
lua/: autocmd.lua
lua/_rsplug/: init.lua
scripts/: check-release.sh  prepare-release.sh  publish-crates.sh  release-metadata.sh  set-version.sh
scripts/tests/: release.sh
src/: adaptive_semaphore.rs  config_display.rs  lib.rs  log.rs  main.rs  util.rs
src/entities/: cache.rs  config.rs  error.rs  lazy_type.rs  loader.rs  mod.rs  package.rs  package_id.rs  package_type.rs  unit.rs
src/rsplug/: mod.rs  util.rs
src/rsplug/entities/: cache.rs  config.rs  config_walker.rs  error.rs  lazy_type.rs  loader.rs  lockfile.rs  merge_type.rs  mod.rs  package.rs  package_id.rs  packpathstate.rs  plugctl.rs  plugin.rs  plugin_id.rs  plugin_loaded.rs  unit.rs
templates/: autocmd.stpl  command.stpl  ftplugin.stpl  ignore.gitignore  init.lua  init.stpl  lazycmd.stpl  loader_lua.stpl  setup_scripts.stpl  state.stpl
templates/doc/: rsplug.txt
templates/lua/_rsplug/: init.stpl  on_cmd.stpl  on_event.stpl  on_ft.lua  on_lua.stpl
templates/lua/_rsplug/on_map/: init.lua  mode__.stpl
templates/plugin/: on_event.stpl  on_lua.lua  on_map.lua
walker/: Cargo.toml
walker/src/: compiled_glob.rs  lib.rs  main.rs  walker.rs  walker_unix.rs  walker_windows.rs
