[workspace]
members = [".", "adaptive_semaphore", "dag", "file_specifier", "walker"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
repository = "https://github.com/gw31415/rsplug.nvim"

[workspace.dependencies]
hashbrown = "0.17"
thiserror = "2.0"
tokio = { version = "1", features = ["full"] }
wildmatch = "2.6"

[package]
name = "rsplug"
version.workspace = true
edition.workspace = true
repository.workspace = true
description = "A blazingly fast Neovim plugin manager written in Rust"
license = "Apache-2.0"

[dependencies]
tokio.workspace = true
hashbrown.workspace = true
thiserror.workspace = true

adaptive_semaphore = { path = "adaptive_semaphore" }
clap = { version = "4.6", features = ["derive", "env"] }
console = "0.16"
dag = { path = "dag", features = ["hashbrown"] }
file_specifier = { path = "file_specifier" }
git2 = { version = "0.21", features = ["ssh", "https"] }
walker = { path = "walker" }
indicatif = { version = "0.18", features = ["tokio"] }
itertools = "0.14"
once_cell = "1.21"
regex = "1.12"
sailfish = "0.11"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
serde_with = { version = "3.21", features = [
	"macros",
	"hashbrown_0_17",
], default-features = false }
toml = "1.1"
unicode-width = "0.2"
wildmatch = "2.6"
xxhash-rust = { version = "0.8.15", features = ["xxh3"] }
