[workspace]
members = [".", "adaptive_semaphore", "dag", "file_specifier", "walker", "walker/vendor/fts"]
resolver = "3"

[workspace.package]
version = "0.2.3"
edition = "2024"
repository = "https://github.com/gw31415/rsplug.nvim"
license = "Apache-2.0"

[workspace.dependencies]
hashbrown = "0.17"
thiserror = "2.0"
tokio = { version = "1", features = ["full"] }
wildmatch = "2.6"
# Internal crates (version must match [workspace.package].version)
adaptive_semaphore = { package = "rsplug-adaptive-semaphore", path = "adaptive_semaphore", version = "0.2.0" }
dag = { package = "rsplug-dag", path = "dag", version = "0.2.0" }
file_specifier = { package = "rsplug-file-specifier", path = "file_specifier", version = "0.2.0" }
walker = { package = "rsplug-walker", path = "walker", version = "0.2.0" }
fts = { package = "rsplug-fts", path = "walker/vendor/fts", version = "0.3.0" }

[profile.release]
strip = true
lto = true

[package]
name = "rsplug"
version.workspace = true
edition.workspace = true
repository.workspace = true
description = "A blazingly fast Neovim plugin manager written in Rust"
license.workspace = true

[dependencies]
tokio.workspace = true
hashbrown.workspace = true
thiserror.workspace = true

adaptive_semaphore.workspace = true
dag = { workspace = true, features = ["hashbrown"] }
file_specifier.workspace = true
git2 = { version = "0.21", features = ["ssh", "https"] }
walker.workspace = true
clap = { version = "4.6", features = ["derive", "env"] }
console = "0.16"
indicatif = { version = "0.18", features = ["tokio"] }
itertools = "0.14"
once_cell = "1.21"
regex = "1.12"
sailfish = "0.11"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
serde_with = { version = "3.21", features = [
	"macros",
	"hashbrown_0_17",
], default-features = false }
toml = "1.1"
unicode-width = "0.2"
wildmatch = "2.6"
xxhash-rust = { version = "0.8.15", features = ["xxh3"] }
