[workspace]
members = ["crates/*", "crates/walker/vendor/fts"]
resolver = "3"

[workspace.package]
version = "0.4.0"
edition = "2024"
repository = "https://github.com/gw31415/rsplug.nvim"
license = "Apache-2.0"

[workspace.dependencies]
hashbrown = "0.17"
thiserror = "2.0"
tokio = { version = "1", features = ["full"] }
wildmatch = "2.6"
# Internal crates (version must match [workspace.package].version)
adaptive_semaphore = { package = "rsplug-adaptive-semaphore", path = "crates/adaptive_semaphore", version = "0.4.0" }
dag = { package = "rsplug-dag", path = "crates/dag", version = "0.4.0" }
file_specifier = { package = "rsplug-file-specifier", path = "crates/file_specifier", version = "0.4.0" }
walker = { package = "rsplug-walker", path = "crates/walker", version = "0.4.0" }
fts = { package = "rsplug-fts", path = "crates/walker/vendor/fts", version = "0.4.0" }

[profile.release]
strip = true
lto = true
