[package]
name = "walker"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
description = "High-performance async directory walker with adaptive concurrency"
exclude = ["vendor/"]

[features]
default = []
bench-persistent-workers = []

[dependencies]
adaptive_semaphore.workspace = true
hashbrown.workspace = true
tokio.workspace = true
wildmatch.workspace = true

path-dedot = { version = "3.1.1", features = ["once_cell_cache"] }

[target.'cfg(all(unix, not(windows)))'.dependencies]
fts = { version = "0.3.0", path = "vendor/fts" }
