[package]
name = "rsplug-walker"
version = "0.2.0"
edition.workspace = true
repository.workspace = true
license.workspace = true
description = "High-performance async directory walker with adaptive concurrency"
exclude = ["vendor/"]
autobins = false

[lib]
name = "walker"

[features]
default = []
bench-persistent-workers = []

[dependencies]
adaptive_semaphore.workspace = true
hashbrown.workspace = true
tokio.workspace = true
wildmatch.workspace = true

path-dedot = { version = "3.1.1", features = ["once_cell_cache"] }

[target.'cfg(all(unix, not(windows)))'.dependencies]
fts.workspace = true
