[package]
name = "rsplug"
version.workspace = true
edition.workspace = true
repository.workspace = true
description = "A blazingly fast Neovim plugin manager written in Rust"
license.workspace = true

[dependencies]
tokio.workspace = true
hashbrown.workspace = true
thiserror.workspace = true

adaptive_semaphore.workspace = true
dag = { workspace = true, features = ["hashbrown"] }
file_specifier.workspace = true
git2 = { version = "0.21", features = ["ssh", "https"] }
walker.workspace = true
clap = { version = "4.6", features = ["derive", "env"] }
console = "0.16"
indicatif = { version = "0.18", features = ["tokio"] }
itertools = "0.15"
once_cell = "1.21"
regex = "1.12"
sailfish = "0.11"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
serde_with = { version = "3.21", features = [
	"macros",
	"hashbrown_0_17",
], default-features = false }
toml = "1.1"
toml_edit = "0.23"
unicode-width = "0.2"
wildmatch = "2.6"
xxhash-rust = { version = "0.8.15", features = ["xxh3"] }
